--- a/_sass/evar/_dashboard.scss
+++ b/_sass/evar/_dashboard.scss
@@ -42,6 +42,8 @@ $dashboard-header-height: 90px;
         line-height: $dashboard-header-height;
         display: inline-block;
         padding: 0 25px;
+        min-width: 100px;
+        text-align: center;
         @include transition(background-color .1s linear, color .1s linear);
 
         &.active {
