--- a/_sass/evar/_builder.scss
+++ b/_sass/evar/_builder.scss
@@ -173,6 +173,82 @@ $builder-header-height: 90px;
     overflow-y: auto;
     overflow-x: hidden;
 
+    .upload-thumbnail {
+      position: relative;
+      height: 140px;
+      overflow: hidden;
+
+      &:hover {
+        aside {
+          opacity: 1;
+          visibility: visible;
+        }
+      }
+
+      aside {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #222;
+        background-color: rgba(0,0,0,.8);
+        line-height: 140px;
+        text-align: center;
+        opacity: 0;
+        visibility: hidden;
+        @include transition(opacity .1s linear);
+
+        .button {
+          display: inline-block;
+          color: white;
+          border: 1px solid white;
+          border-radius: 3px;
+          font-size: 14px;
+          font-weight: bold;
+          opacity: .7;
+          padding: .3em 1em;
+          line-height: 1.5em;
+          @include transition(opacity .1s linear);
+
+          &:hover {
+            opacity: 1;
+          }
+        }
+      }
+
+      img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+      }
+
+      p {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        margin: 0;
+        color: white;
+        background-color: #222;
+        background-color: rgba(0,0,0,.8);
+        padding: .8em;
+        font-size: 14px;
+
+        .fa {
+          margin-right: 10px;
+          vertical-align: middle;
+        }
+      }
+    }
+
+    .upload-thumbnail-list {
+      .upload-thumbnail {
+        margin-bottom: 20px;
+      }
+    }
+
     .upload-content-wrapper {
       padding-bottom: 1.5em;
 
