--- a/_sass/evar/_dashboard.scss
+++ b/_sass/evar/_dashboard.scss
@@ -1025,6 +1025,14 @@ $dashboard-header-height: 90px;
     width: 18%;
   }
 
+  .col-20p {
+    width: 20%;
+  }
+
+  .col-23p {
+    width: 23%;
+  }
+
   thead {
     th {
       background-color: #e9e9e9;
@@ -1060,12 +1068,21 @@ $dashboard-header-height: 90px;
       }
 
       &.actions {
-        a {
-          margin: 0 5px;
+        .button {
+          @extend button;
+          background-color: $medium-gray;
+          padding: .5em;
+          color: white;
+          font-size: 12px;
 
           .fa {
-            color: $medium-gray;
+            color: inherit;
             margin-right: 2px;
+          }
+
+          &:hover {
+            background-color: darken($medium-gray, 15);
+            color: white;
           }
         }
       }
