[NEW PAGE] 어드민 비밀번호 재설정 페이지

--- a/_includes/admin-header.html
+++ b/_includes/admin-header.html
@@ -12,7 +12,7 @@
 
     <div class="account-actions">
       <p><strong>홍성철</strong>님</p>
-      <a href="javascript:void(0)" class="button primary">비밀번호 재설정</a>
+      <a href="{{ "admin-password-reset.html" | prepend: site.baseurl }}" class="button primary">비밀번호 재설정</a>
       <a href="javascript:void(0)" class="button">로그아웃</a>
     </div>
   </div>
