--- a/_sass/evar/_builder.scss
+++ b/_sass/evar/_builder.scss
@@ -320,22 +320,23 @@ $builder-header-height: 90px;
     position: absolute;
     top: 0;
     left: 50%;
-    width: 375px;
-    height: 729px;
-    background-image: url(../images/builder/android-mockup.png);
-    margin-top: 50px;
-    margin-bottom: 50px;
-    margin-left: -187.5px;
+    width: 450px;
+    height: 873px;
+    background-image: url(../images/builder/android-mockup-big.png);
+    margin-top: 25px;
+    margin-bottom: 25px;
+    margin-left: -225px;
   }
 
   #work-space {
     position: absolute;
-    top: 67px;
-    left: 20px;
-    width: 334px;
-    height: 597px;
+    top: 85px;
+    left: 28px;
+    width: 395px;
+    height: 705px;
     background-color: white;
     background-color: rgba(255,255,255,.5);
+    border: 1px solid #ddd;
   }
 }
 
